# Tabalho_LP

./: README.md
web_app/: .env  Cargo.toml  Rocket.toml  diesel.toml
web_app/migrations/2024-06-19-010932_create_users/: up.sql
web_app/src/: args.rs  criptography.rs  db.rs  files_ops.rs  main.rs  model.rs  models.rs  pages.rs  schema.rs  user_ops.rs
web_app/static/: auth.html  cloud.html  index.html  register.html
web_app/static/css/: main.css  styles.css
