[package]
name = "web_app"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"
serde = {version = "1.0.199", features = ["derive"]}
reqwest = {version = "0.12.4", features = ["json"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
rocket = { version = "0.5.0-rc.1", features = ["json"] }